# kmd

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  RELEASING.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: design-mode-a11y.md
docs/planning/: 01-research-summary.md  02-product-vision.md  03-feature-spec.md  04-markdown-dialect-spec.md  05-design-md-support.md  06-rendering-architecture.md  07-cross-platform-technical-architecture.md  08-ui-ux-design-spec.md  09-security-privacy.md  10-performance-offline.md  11-implementation-roadmap.md  12-test-plan-fixtures.md  14-sample-doc-showcase.md  16-references.md  README.md
fixtures/: design-md-invalid.md  design-md-valid.md  dtcg-sample.md  dylanbrouwer-DESIGN.md  gfm-test.md  perf-test.md  safe-test.md  sample.md  shopvibe-DESIGN.md  thoughtstream-DESIGN.md  xss-test.md
fixtures/design-mode/: apple.md  shopvibe.md  synthetic-dark-only.md  (+6 more)
samples/: dylanbrouwer-DESIGN.md  nyx-DESIGN.md  pranayama_library.md  thoughtstream-DESIGN.md
scripts/: build-verify.sh  ico-utils.mjs  ico-utils.test.ts  sync-icons.mjs  tauri-build.mjs
src/: App.css  App.tsx  global.css  main.tsx  tauri-types.d.ts  theme.ts  tokens.css  updater.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
(+89 files in other folders)
