[package]
name = "kmd"
version = "0.1.0"
description = "Kawaii MD reader"
authors = ["kmd contributors"]
license = "MIT"
repository = "https://github.com/elevenoutoften/kmd"
edition = "2021"

[lib]
name = "kmd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
